crates/test-files/fixtures/compile_errors/cannot_move2.fe
contract Foo:

  pub fn foo():
    let x:u256[10]
    let y:u256[10]
    let c:u256[20] = x + y
